# Agrobot_ROS

./: .gitignore  README.md
Vision/: Hallo Wereld.txt
launch/: agrobot_launch.py
src/: detect.py  detection_service_server.py  werkend.py
src/HMI/: package.xml  setup.cfg  setup.py
src/HMI/HMI/: GUI.py
src/action_interfaces/: CMakeLists.txt  package.xml
src/gripper_arm_control/: CMakeLists.txt  package.xml
src/gripper_arm_control/src/: harvest.cpp
src/harvest_action/: CMakeLists.txt  package.xml
src/harvest_action/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp  harvest_client.cpp  harvest_server.cpp
src/main/: package.xml  setup.py
src/main/main/: main.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: uwb_active.py
src/navigation_system/: package.xml  setup.py
src/navigation_system/src/: coordinates.py  drive_node  dwm1001_active.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py
src/tester_pack/: package.xml  setup.cfg  setup.py
src/tester_pack/tester_pack/: tester.py
src/vision_system/: detect.py
